Feature/ccd 73 (#32)
* [CCD-73] Define new logic for highlighting session

Signed-off-by: zenodinh <quandinh33@gmail.com>

* [CCD-73] Receive moodle file

Signed-off-by: zenodinh <quandinh33@gmail.com>

* [CCD-73] Add thread pool for async session highlighting

Signed-off-by: zenodinh <quandinh33@gmail.com>

* [CCD-73] Add thread pool for async session highlighting

Signed-off-by: zenodinh <quandinh33@gmail.com>

* [CCD-73] Restore dev resource

Signed-off-by: zenodinh <quandinh33@gmail.com>

---------

Signed-off-by: zenodinh <quandinh33@gmail.com>